--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.2.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^2.2.1",
